--- a/gary2.0/src/pages/ParlayCardFix.css
+++ b/gary2.0/src/pages/ParlayCardFix.css
@@ -41,7 +41,7 @@
 .pick-card.parlay-card .pick-card-back .parlay-leg-pick {
   font-size: 0.9rem !important;
   font-weight: bold !important;
-  color: #fff !important;
+  color: #d4af37 !important;
   line-height: 1.2 !important;
   flex: 1 !important;
   text-align: left !important;
