--- a/gary2.0/src/styles/RealGaryPicks.css
+++ b/gary2.0/src/styles/RealGaryPicks.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #f8f9fa;
+  background-color: #111111;
+  color: white;
 }
 
 .picks-container {
@@ -13,6 +14,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  background-color: #111111;
 }
 
 .pick-cards {
@@ -31,8 +33,8 @@
 
 .prev-pick,
 .next-pick {
-  background-color: #2196f3;
-  color: white;
+  background-color: #d4af37;
+  color: black;
   border: none;
   border-radius: 4px;
   padding: 8px 16px;
@@ -43,7 +45,7 @@
 
 .prev-pick:hover,
 .next-pick:hover {
-  background-color: #1976d2;
+  background-color: #c9a535;
 }
 
 .prev-pick.disabled,
