--- a/gary2.0/src/styles/LoadingState.css
+++ b/gary2.0/src/styles/LoadingState.css
@@ -5,10 +5,18 @@
   justify-content: center;
   padding: 40px 20px;
   text-align: center;
+  background-color: #111111 !important;
+  min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 
 .loading-message {
   margin-top: 16px;
-  color: #666;
+  color: #d4af37;
   font-size: 16px;
+  font-weight: bold;
 }
